// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding a new blockdevice 1`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"devType\\": \\"partition\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": \\"LVM2_member\\",
    \\"idFsUsage\\": \\"filesystem\\",
    \\"idFsUuid\\": \\"wCBeLJ-3ors-t60q-f4sB-2Mhc-eLvN-DZ9s9v\\",
    \\"idPartEntryNumber\\": 1,
    \\"size\\": \\"81784832\\",
    \\"scsi80\\": \\"80\\",
    \\"scsi83\\": \\"83\\",
    \\"isReadOnly\\": true,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": true,
    \\"dmLvName\\": \\"swap\\",
    \\"dmVgName\\": \\"centos\\",
    \\"dmUuid\\": \\"LVM-pV8TgNKMJVNrolJgMhVwg4CAeFFAIMC83IU1hvimWWlvmd5xQddtMIqRtjwOuKTz\\",
    \\"mdUuid\\": null
  }
}"
`;

exports[`Changing a blockdevice 1`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"devType\\": \\"partition\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": \\"LVM2_member\\",
    \\"idFsUsage\\": \\"filesystem\\",
    \\"idFsUuid\\": \\"wCBeLJ-3ors-t60q-f4sB-2Mhc-eLvN-DZ9s9v\\",
    \\"idPartEntryNumber\\": 1,
    \\"size\\": \\"800000\\",
    \\"scsi80\\": \\"80\\",
    \\"scsi83\\": \\"83\\",
    \\"isReadOnly\\": true,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": true,
    \\"dmLvName\\": \\"swap\\",
    \\"dmVgName\\": \\"centos\\",
    \\"dmUuid\\": \\"LVM-pV8TgNKMJVNrolJgMhVwg4CAeFFAIMC83IU1hvimWWlvmd5xQddtMIqRtjwOuKTz\\",
    \\"mdUuid\\": null
  }
}"
`;
